--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- cntr+u ver codigo fuente en firefox -->
   <!-- github crear repositorio-> marcar SIEMPRE Initialize this repository with a README y que sea publico -->
   <!-- github clone-> copiamos la direccion del repositorio-> cntr+mayusculas+p -> clonar-> url del repositorio-> enter-> abrir en la carpeta -->
-  <!-- crear un archivo en visual index.html-> guardamos en el repositorio local-> y luego en el repositorio en la nube-> seleccionamos el 3 icono de la parte derecha y   -->
+  <!-- crear un archivo en visual index.html-> guardamos en el repositorio local-> y luego en el repositorio en la nube-> seleccionamos el 3 icono de la parte derecha 
+    y escribinos el mensaje y le damos a la V-> luego en la barra inferior guardamos cambios para subirlos a la nube.-->
 </body>
 </html>
