--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <!-- github clone-> copiamos la direccion del repositorio-> cntr+mayusculas+p -> clonar-> url del repositorio-> enter-> abrir en la carpeta -->
   <!-- crear un archivo en visual index.html-> guardamos en el repositorio local-> y luego en el repositorio en la nube-> seleccionamos el 3 icono de la parte derecha 
     y escribinos el mensaje y le damos a la V-> aceptamoas-> luego en la barra inferior guardamos cambios para subirlos a la nube.-> aceptamos-->
+    <!-- settings->GitHub Pages-> master branch seleccionada-> cogemos url seleccionada-> abrimos en un navegador -->
 </body>
 </html>
