--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-  <p>Soy un párrafo</p>  
+  <p>Soy un párrafo</p> 
+  <p>Durante años la informática personal ha estado dominada por intel&microsoft.</p>
+  <p>Durante años la informática personal ha estado dominada por intel&amp;microsoft.</p>
   <!-- cntr+u ver codigo fuente en firefox -->
   <!-- github crear repositorio-> marcar SIEMPRE Initialize this repository with a README y que sea publico -->
   <!-- github clone-> copiamos la direccion del repositorio-> cntr+mayusculas+p -> clonar-> url del repositorio-> enter-> abrir en la carpeta -->
