--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <p>Soy un párrafo</p> 
   <p>Durante años la informática personal ha estado dominada por intel&microsoft.</p>
   <p>Durante años la informática personal ha estado dominada por intel&amp;microsoft.</p>
+  <p><span style="font-size: 4rem;">&#x1F30D; &#x1F411; &#x1F435; &#x1F470; &#x1F47B; &#x1F507; &#x1F52A; &#x1F52B; &#x1F6BF;</span></p>
+  <p>menor 	&lt;</p>
+  <p>mayor 	&gt;</p>
+  <p>et (en inglés, ampersand) &amp;</p>
+  <p>comillas &quot;</p>
+  <p>apostrofe &apos;</p>
   <!-- cntr+u ver codigo fuente en firefox -->
   <!-- github crear repositorio-> marcar SIEMPRE Initialize this repository with a README y que sea publico -->
   <!-- github clone-> copiamos la direccion del repositorio-> cntr+mayusculas+p -> clonar-> url del repositorio-> enter-> abrir en la carpeta -->
